# Notes-Flask-edu-project

./: README.md  pyproject.toml
instance/: database.db
website/: __init__.py  auth.py  models.py  views.py
website/static/: index.js
website/templates/: base.html  home.html  login.html  sign_up.html
